<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_settings">Settings</string>
    <string name="resgister_accountnumber"> 账    号：</string>
    <string name="Previous">上一步</string>
    <string name="back">返回</string>
    <string name="cheyouxin">车友信</string>
    <string name="chat">聊天</string>
    <string name="cheyouhui">车友会</string>
    <string name="cheshenghuo">车生活</string>
    <string name="wo">我</string>
    <string name="illegalhandl_select">全选</string>
    <string name="comment_perfection">提 交</string>
    <string name="connection_mory">驾驶车型:</string>
    <string name="connection_free">购车时间:</string>
    <string name="connection_tree">行驶里程:</string>
    <string name="connection_true">公里</string>
    <string name="resgister_perfection_perfection">完成</string>
    <string name="login_cutover">切换账号</string>
    <string name="login_password">密    码：</string>
    <string name="login_prompt">小伙伴前来报道：</string>
    <string name="login_remember">记住账号和密码</string>
    <string name="login_bootautomatically">开机登录</string>
    <string name="login_forgot">忘记密码？</string>
    <string name="login_register">注册新账号</string>
    <string name="login_login">登录</string>
    <string name="title_activity_login_inconsistent">Login_inconsistent</string>
    <string name="login_inconsistent_title">系统检测您目前的城市与注册地不一致,请选择登录城市：</string>
    <string name="login_inconsistent_nowcity">当前城市：</string>
    <string name="login_inconsistent_registercity">注册城市：</string>
    <string name="login_inconsistent_other">其他：</string>
    <string name="title_activity_login_animation">Login_animation</string>
    <string name="title_activity_register">Register</string>
    <string name="resgister">注册</string>
    <string name="resgister_prompt">新来乍到，请注册吧！</string>
    <string name="resgister_setpassword">设定密码：</string>
    <string name="resgister_passwordconfirmation">密码确认：</string>
    <string name="resgister_verificationcode">验证码：</string>
    <string name="resgister_clickfor">点击获取</string>
    <string name="title_activity_register_car">Register_car</string>
    <string name="resgistercar_title">人以类聚，车以群分</string>
    <string name="resgistercar_title_2">请输入您的座驾品牌型号：</string>
    <string name="resgistercar_brand">品牌:</string>
    <string name="resgistercar_cars">车系:</string>
    <string name="title_activity_register_perfection">Register_perfection</string>
    <string name="resgister_perfection_select">请选择注册地：</string>
    <string name="resgister_perfection_default">默认当前城市：</string>
    <string name="resgister_perfection_other">其他城市：</string>
    <string name="resgister_perfection_readandagree">已阅读并同意使用条款和隐私政策</string>
    <string name="title_activity_readandagree">Readandagree</string>
    <string name="title_readandagree">用户协议</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="sms_verification_hint_1">请输入手机号</string>
    <string name="sms_verification_yzm">获取验证码</string>
    <string name="sms_verification_title">手机短信验证</string>
    <string name="reset_password_title">新密码设置</string>
    <string name="reset_password_1">请输入新的密码</string>
    <string name="reset_password_2">请再次输入密码</string>
    <string name="title_activity_channelinterface">Channelinterface</string>
    <string name="title_activity_drivestabhostactivity">CheyouFragment</string>
    <string name="new_friend_request">新朋友验证请求</string>
    <string name="textview">TextView</string>
    <string name="search_friend">寻找新朋友</string>
    <string name="cheyou_fragment_three">谁与我擦肩而过 </string>
    <string name="public_account">公众账号</string>
    <string name="cheyou_fragment_frequency">① </string>
    <string name="cheyou_fragment_next">    >></string>
    <string name="title_activity_drivestabhost_authenticationrequest">AuthenticationrequestActivity</string>
    <string name="authenticationrequest_ar">新朋友验证请求</string>
    <string name="check_request_agree">同意</string>
    <string name="check_request_disagree">不同意</string>
    <string name="private_commun">私人通信录</string>
    <string name="carfriend_commun">车友通信录</string>
    <string name="title_activity_drivestabhost_findnewfriends">FindnewfriendsActivity</string>
    <string name="findnewfriends_1">搜索</string>
    <string name="findnewfriends_2">手机号 </string>
    <string name="findnewfriends_3">添加手机联系人</string>
    <string name="findnewfriends_4">查找附近的车友</string>
    <string name="findnewfriends_5">按条件查找车友</string>
    <string name="findnew_Conditions_1"> 性别:</string>
    <string name="findnew_Conditions_2">男</string>
    <string name="findnew_Conditions_3">女</string>
    <string name="findnew_Conditions_4">年龄:</string>
    <string name="findnew_Conditions_5">座驾:</string>
    <string name="find_Conditions_find">查 找</string>
    <string name="title_activity_drivestabhost_passme">PassmeActivity</string>
    <string name="passme_title_1">  车友</string>
    <string name="passme_title_2">性别</string>
    <string name="passme_title_3">  年龄</string>
    <string name="passme_title_4">擦</string>
    <string name="Personalinformation_title">好友个人信息   </string>
    <string name="Personalinformation_title_1">地区： </string>
    <string name="Personalinformation_Remarksname"> 备注名：</string>
    <string name="Personalinformation_title_2">个性签名：</string>
    <string name="Personalinformation_title_3">手机号：</string>
    <string name="Personalinformation_title_4"> 发消息/加为好友   </string>
    <string name="Personalinformation_title_5">个人相册：</string>
    <string name="Personalinformation_title_6">他的生意</string>
    <string name="title_activity_drivestabhost_publicaccount">PublicAccountActivity</string>
    <string name="title_activity_carabouttabhost">CaraboutTabhostActivity</string>
    <string name="cheyouquan">车友圈 </string>
    <string name="carlife_fargment_top_2">收到的附近车友求助</string>
    <string name="carlife_fargment_top_3">我要向附近车友求助 </string>
    <string name="carlife_fargment_service_1">紧急救援</string>
    <string name="carlife_fargment_service_2">加 油 站</string>
    <string name="carlife_fargment_service_3">维修保养</string>
    <string name="carlife_fargment_service_4">洗车美容</string>
    <string name="carlife_fargment_service_5">装潢改装</string>
    <string name="carlife_fargment_no_1">车辆质保</string>
    <string name="carlife_fargment_request_7">买车卖车</string>
    <string name="carlife_fargment_no_2">陪练驾校</string>
    <string name="carlife_fargment_no_3">违章查询</string>
    <string name="carlife_fargment_request_1">违章办理</string>
    <string name="carlife_fargment_request_2">代办验车</string>
    <string name="carlife_fargment_request_3">车险理赔</string>
    <string name="carlife_fargment_request_4">找 代 驾</string>
    <string name="carlife_fargment_request_5">租车拼车</string>
    <string name="carlife_fargment_request_6">代办过户</string>
    <string name="carlife_fargment_no_4">车辆报废</string>
    <string name="carlife_fargment_application">我要申请提供车生活服务 </string>
    <string name="carnameleft">选择城市</string>
    <string name="normoerleft">选择区域</string>
    <string name="shiftjsonleft">选择排序方式</string>
    <string name="title_activity_carabout_tabhost_bikerscircle">CaraboutTabhost_bikerscircleActivity</string>
    <string name="title_activity_carabout_tabhost__nearbyhelpriders">CaraboutTabhost_NearbyhelpridersActivity</string>
    <string name="nearbyhelpriders_title">附近车友求助</string>
    <string name="nearbyhelpriders_1">帮助响应</string>
    <string name="title_activity_carabout_tabhost__iwanttohelp">CaraboutTabhost_IwanttohelpActivity</string>
    <string name="iwanttohelp_title">我要求助</string>
    <string name="iwanttohelp_1">选择求助内容</string>
    <string name="iwanttohelp_2">事故遇险需急救</string>
    <string name="iwanttohelp_3">车辆自燃</string>
    <string name="iwanttohelp_4">车辆换胎帮助</string>
    <string name="iwanttohelp_5">车辆换胎工具</string>
    <string name="iwanttohelp_6">车辆没油</string>
    <string name="iwanttohelp_7">车辆抛锚</string>
    <string name="iwanttohelp_8" tools:ignore="TypographyEllipsis">如有其他情况，请输入...</string>
    <string name="iwanttohelp_9">发出求救信息</string>
    <string name="title_activity_carabout_tabhost__application">CaraboutTabhost_ApplicationActivity</string>
    <string name="title_activity_carabout_tabhost__wanttorescue">CaraboutTabhost_WanttorescueActivity</string>
    <string name="wanttorescue_title">我要救援</string>
    <string name="wanttorescue_numbertitle">紧急救援请拨：</string>
    <string name="wanttorescue_number" tools:ignore="TypographyDashes">4000-622-688</string>
    <string name="wanttorescue_medium">申请即获六个月全国免费道路救援，有备无患！</string>
    <string name="wanttorescue_select">全选</string>
    <string name="wanttorescue_title_1">（系统默认按距离排序）</string>
    <string name="title_activity_carabout_tabhost__refuel">CaraboutTabhost_RefuelActivity</string>
    <string name="refuel_title">我要加油</string>
    <string name="title_activity_carabout_tabhost__maintenance">CaraboutTabhost_MaintenanceActivity</string>
    <string name="maintenance_title">维修保养</string>
    <string name="title_activity_carabout_tabhost__beautycarwash">CaraboutTabhost_BeautycarwashActivity</string>
    <string name="beautycarwash_title_1"> 洗 车</string>
    <string name="beautycarwash_title_2">美 容</string>
    <string name="title_activity_carabout_tabhost__decoratingmodification">CaraboutTabhost_DecoratingmodificationActivity</string>
    <string name="decoratingmodification_title_1">装潢</string>
    <string name="decoratingmodification_title_2">改装</string>
    <string name="decorating_show_item">洁超洗车店</string>
    <string name="decorating_address">上海市宝山路88号</string>
    <string name="title_activity_carabout_tabhost__tradingcar">CaraboutTabhost_TradingcarActivity</string>
    <string name="tradingcar_title_1">转让中车辆 </string>
    <string name="tradingcar_title_2"> 收车商家</string>
    <string name="cardealers_title">我要卖车</string>
    <string name="cardealers_1">填写基本车辆信息：</string>
    <string name="cardealers_2">品牌型号：</string>
    <string name="cardealers_3">配置款式：</string>
    <string name="cardealers_4">车辆颜色：</string>
    <string name="cardealers_5">牌照城市：</string>
    <string name="cardealers_6">上牌时间：</string>
    <string name="cardealers_7">行驶里程：</string>
    <string name="tradingcar_buy_title">车友求购</string>
    <string name="buy_details_title">求购详情</string>
    <string name="buy_details_1">车型:</string>
    <string name="buy_details_2">车龄:</string>
    <string name="buy_details_3">排挡:</string>
    <string name="buy_details_4">排放标准:</string>
    <string name="buy_details_5">颜色:</string>
    <string name="serviceproviders_type">服务类型：</string>
    <string name="serviceproviders_dsore">车友评分：</string>
    <string name="serviceproviders_impression">车友印象：</string>
    <string name="serviceproviders_number">联系电话：</string>
    <string name="serviceproviders_time">营业时间：</string>
    <string name="serviceproviders_price">服务价格：</string>
    <string name="serviceproviders_readme">店友自述：</string>
    <string name="serviceproviders_evaluation">网友评价：</string>
    <string name="serviceproviders_viewdetails">查看评价详情>></string>
    <string name="serviceproviders_iwantevaluate">我   要   评   价</string>
    <string name="serviceproviders_viewinginformation">查 看 车 友 个 人 信 息</string>
    <string name="my_fargment_name">徐勇</string>
    <string name="sex">性别</string>
    <string name="phone">电话</string>
    <string name="search">搜寻</string>
    <string name="conditional_search">条件查找</string>
    <string name="age">年龄</string>
    <string name="distance">距离</string>
    <string name="user_face">用户头像</string>
    <string name="shopname">上海超能修理店</string>
    <string name="yyzyyrz">营业执照已认证</string>
    <string name="dlujyuan">道路救援</string>
    <string name="chengskk">诚实可靠</string>
    <string name="_88_xx_address">上海市宝山区宝山路88号xx大厦对面</string>
    <string name="_24_hour">24小时</string>
    <string name="_18901330037">18901330037</string>
    <string name="_50_2_">50公里内免费，每公里2元</string>
    <string name="bendizhengguanjy">本店正规经营……</string>
    <string name="_3936_">3936条</string>
    <string name="myphone">我的手机号:</string>
</resources>