<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f1e4f1"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/user_face_a"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/user_face"
        android:padding="2dp"
        android:scaleType="fitXY"
        android:src="@drawable/userface_model" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/user_name_a"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/my_fargment_name" />

            <TextView
                android:id="@+id/user_age_a"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="55dp"
                android:gravity="center_vertical"
                android:text="@string/age" />

            <ImageView
                android:id="@+id/user_sex_a"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/user_age_a"
                android:contentDescription="@string/sex"
                android:src="@drawable/man" />
        </RelativeLayout>

        <TextView
            android:id="@+id/user_distance_a"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/distance" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox_a"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

</LinearLayout>