<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/view_top" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp" >
                </android.support.v4.view.ViewPager>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/serviceproviders_name"
                        style="@style/tv_content_17_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/shopname" />

                    <cn.ieauto.autogroup.android.widget.AutoScaleTextView
                        android:id="@+id/serviceproviders_Certification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/e5_2_012_1"
                        android:gravity="center"
                        android:text="@string/yyzyyrz"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/tv_content_14_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/serviceproviders_type" />

                        <TextView
                            android:id="@+id/serviceproviders_type"
                            style="@style/tv_content_14_gar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/dlujyuan" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/tv_content_14_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/serviceproviders_dsore" />

                        <RatingBar
                            android:id="@+id/small_ratingbar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:max="5" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/tv_content_14_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/serviceproviders_impression" />

                        <TextView
                            android:id="@+id/serviceproviders_impression"
                            style="@style/tv_content_14_gar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/chengskk" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_company_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:padding="5dp" >

                <cn.ieauto.autogroup.android.widget.AutoScaleTextView
                    android:id="@+id/serviceproviders_address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center|left"
                    android:text="@string/_88_xx_address"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/serviceproviders_viewLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/mm_submenu_right"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <include layout="@layout/ieauto_autogroup_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <cn.ieauto.autogroup.android.widget.AutoScaleTextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/serviceproviders_time"
                        android:textColor="@color/black" />

                    <include layout="@layout/ieauto_autogroup_horizontal" />

                    <cn.ieauto.autogroup.android.widget.AutoScaleTextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/serviceproviders_number"
                        android:textColor="@color/black" />

                    <include layout="@layout/ieauto_autogroup_horizontal" />

                    <cn.ieauto.autogroup.android.widget.AutoScaleTextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/serviceproviders_price"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/serviceproviders_Hours"
                        style="@style/tv_content_17_black"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/_24_hour" />

                    <include layout="@layout/ieauto_autogroup_horizontal" />

                    <TextView
                        android:id="@+id/serviceproviders_Phone"
                        style="@style/tv_content_17_black"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/_18901330037" />

                    <include layout="@layout/ieauto_autogroup_horizontal" />

                    <cn.ieauto.autogroup.android.widget.AutoScaleTextView
                        android:id="@+id/serviceproviders_price"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/_50_2_" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/tv_content_17_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/serviceproviders_readme" />

                <TextView
                    android:id="@+id/serviceproviders_readme"
                    style="@style/tv_content_17_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/bendizhengguanjy" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/tv_content_17_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/serviceproviders_evaluation" />

                <TextView
                    android:id="@+id/serviceproviders_number"
                    style="@style/tv_content_14_cl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/_3936_" />

                <Button
                    android:id="@+id/serviceproviders_viewEvaluationDetails"
                    style="@style/tv_content_17_white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@drawable/e5_2_012_1"
                    android:gravity="center"
                    android:text="@string/serviceproviders_viewdetails" />
            </LinearLayout>

            <Button
                android:id="@+id/serviceproviders_IwantToeValuate"
                style="@style/tv_content_17_white"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_ok"
                android:gravity="center"
                android:text="@string/serviceproviders_iwantevaluate" />

            <Button
                android:id="@+id/serviceproviders_ViewPersonalInformation"
             style="@style/tv_content_17_white"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_ok"
                android:gravity="center"
                android:text="@string/serviceproviders_viewinginformation" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>